# api_project_template

./: .copier-answers.yml.jinja  .cruft.json  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  FEATURES.md  LICENSE  MIGRATING.md  OIDC_COMPLIANCE.md  OIDC_TESTING.md  PRODUCTION_COMPLETE.md  README.md  SETTINGS_MIGRATION.md  config.yaml  cookiecutter.json  copier.yml  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  oidc-providers.yaml  pyproject.toml  src_main.py
.github/: copilot-instructions.md
deploy/: deploy-local.txt
dev/: __init__.py  cleanup_dev.sh  dev_utils.py  setup_dev.sh  setup_keycloak.py
dev_env/: README.md  docker-compose.yml  setup_dev.sh
docs/: INDEX.md  PRODUCTION_DEPLOYMENT.md  TEMPORAL_AUTHENTICATION.md  TEMPORAL_WRAPPER_DESIGN.md  configuration.md  examples-javascript-oidc-client.md  examples-python-oidc-client.md  fastapi-auth-oidc-bff.md  fastapi-clean-architecture-overview.md  fastapi-docker-dev-environment.md  fastapi-kubernetes-deployment.md  fastapi-production-deployment-docker-compose.md  fastapi-sessions-and-cookies.md  fastapi-temporal-workflows.md  fastapi-testing-strategy.md  index.md  security.md
hooks/: post_gen_project.py  post_gen_project_infra.py  post_gen_project_old.py  pre_gen_project.py
k8s-out/: app-cm0-configmap.yaml  app-cm2-configmap.yaml  app-deployment.yaml  app-service.yaml  csrf-signing-secret-secret.yaml  env-configmap.yaml  postgres-app-owner-pw-secret.yaml  postgres-app-ro-pw-secret.yaml  postgres-app-user-pw-secret.yaml  postgres-cm0-configmap.yaml  postgres-cm1-configmap.yaml  postgres-cm4-configmap.yaml  postgres-cm5-configmap.yaml  postgres-deployment.yaml  postgres-password-secret.yaml  postgres-server-ca-secret.yaml  postgres-service.yaml  postgres-temporal-pw-secret.yaml  postgres-tls-cert-secret.yaml  postgres-tls-key-secret.yaml  postgres-verifier-cm0-configmap.yaml  postgres-verifier-pod.yaml  redis-backups-persistentvolumeclaim.yaml  redis-cm2-configmap.yaml  redis-deployment.yaml  redis-password-secret.yaml  session-signing-secret-secret.yaml  temporal-admin-tools-deployment.yaml  temporal-cm1-configmap.yaml  (+9 more)
(+385 files in other folders)
